--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -1,8 +1,61 @@
-/* ----------------------------------------------------------------
-	Custom CSS
+.imgLogoFooter {
+    height: 50px;
+    width: auto;
+    object-fit: contain;
+}
 
-	Add all your Custom Styled CSS here for New Styles or
-	Overwriting Default Theme Styles for Better Handling Updates
------------------------------------------------------------------*/
-
-
+a,
+h1>span:not(.nocolor):not(.badge),
+h2>span:not(.nocolor):not(.badge),
+h3>span:not(.nocolor):not(.badge),
+h4>span:not(.nocolor):not(.badge),
+h5>span:not(.nocolor):not(.badge),
+h6>span:not(.nocolor):not(.badge),
+.header-extras li .he-text span,
+.menu-item:hover>.menu-link,
+.menu-item.current>.menu-link,
+.dark .menu-item:hover>.menu-link,
+.dark .menu-item.current>.menu-link,
+.top-cart-item-desc a:hover,
+.top-cart-action .top-checkout-price,
+.breadcrumb a:hover,
+.grid-filter li a:hover,
+.portfolio-desc h3 a:hover,
+#portfolio-navigation a:hover,
+.entry-title h2 a:hover,
+.entry-title h3 a:hover,
+.entry-title h4 a:hover,
+.post-timeline .entry:hover .entry-timeline,
+.post-timeline .entry:hover .timeline-divider,
+.comment-content .comment-author a:hover,
+.product-title h3 a:hover,
+.single-product .product-title h2 a:hover,
+.product-price ins,
+.single-product .product-price,
+.process-steps li.active h5,
+.process-steps li.ui-tabs-active h5,
+.tab-nav-lg li.ui-tabs-active a,
+.team-title span,
+.btn-link,
+.page-link,
+.page-link:hover,
+.page-link:focus,
+.fbox-plain .fbox-icon i,
+.fbox-plain .fbox-icon img,
+.fbox-border .fbox-icon i,
+.fbox-border .fbox-icon img,
+.dark .menu-item:hover>.menu-link,
+.dark .menu-item.current>.menu-link,
+.dark .top-cart-item-desc a:hover,
+.dark .breadcrumb a:hover,
+.dark .portfolio-desc h3 a:hover,
+.dark #portfolio-navigation a:hover,
+.dark .entry-title h2 a:hover,
+.dark .entry-title h3 a:hover,
+.dark .entry-title h4 a:hover,
+.dark .product-title h3 a:hover,
+.dark .single-product .product-title h2 a:hover,
+.dark .product-price ins,
+.dark .tab-nav-lg li.ui-tabs-active a {
+    color: #c2e2cb !important;
+}
