--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -61,5 +61,5 @@ h6>span:not(.nocolor):not(.badge),
 .dark .single-product .product-title h2 a:hover,
 .dark .product-price ins,
 .dark .tab-nav-lg li.ui-tabs-active a {
-    color: #91b19a !important;
+    color: #ffffff !important;
 }
